fix(index): rename images path

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <h3>Anel de diamante</h3>
                     </div>
                     <div class="image">
-                        <img src="/images/anel.png" alt="anel de diamante">
+                        <img src="images/anel.png" alt="anel de diamante">
                     </div>
 
                     <div class="button">
@@ -64,7 +64,7 @@
                         <h3>Relógio de Ouro</h3>
                     </div>
                     <div class="image">
-                        <img src="/images/relógio.png" alt="relógio de ouro">
+                        <img src="images/relógio.png" alt="relógio de ouro">
                     </div>
 
 
@@ -77,7 +77,7 @@
                         <h3>Colar de esmeralda</h3>
                     </div>
                     <div class="image">
-                        <img src="/images/colar.png" alt="colar de esmeralda">
+                        <img src="images/colar.png" alt="colar de esmeralda">
                     </div>
                     <div class="button">
                         <h3>COMPRAR</h3>
@@ -92,19 +92,19 @@
     <section id="contact">
         <div class="footer">
             <div class="logo">
-                <img src="/images/logo-black.svg" alt="CITi's Boutique">
+                <img src="images/logo-black.svg" alt="CITi's Boutique">
             </div>
             <div class="contacts">
                 <div class="infos">
-                    <img src="/images/phone.svg" alt="telefone">
+                    <img src="images/phone.svg" alt="telefone">
                     <p>81 3511-1259</p>
                 </div>
                 <div class="infos">
-                    <img src="/images/email.svg" alt="email">
+                    <img src="images/email.svg" alt="email">
                     <p>contato@ejoias.com</p>
                 </div>
                 <div class="infos">
-                    <img src="/images/instagram.svg" alt="instagram">
+                    <img src="images/instagram.svg" alt="instagram">
                     <p>@ejoiasboutique</p>
                 </div>
             </div>
